// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card icon test should render cards with props selected and interactive 1`] = `
<div>
  <div
    class="bp3-card bp3-interactive bp3-elevation-0 card selected interactive"
    tabindex="0"
  >
    <div
      class="cardIcon"
    >
      <span
        class="bp3-icon StyledProps--main"
        data-icon="advanced"
      >
        <svg
          height="25"
          viewBox="0 0 16 16"
          width="25"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M3.557 4.017a.5.5 0 00-.5.492v7.005a.5.5 0 00.5.507h8.98a.5.5 0 00.5-.5l.001-2.554a.5.5 0 111 0v2.554a1.5 1.5 0 01-1.5 1.5h-8.98a1.5 1.5 0 01-1.5-1.522V4.495a1.5 1.5 0 011.5-1.478h2.951a.5.5 0 010 1H3.557z"
            fill="currentColor"
            fill-rule="evenodd"
          />
          <path
            clip-rule="evenodd"
            d="M11.002 3.694a1.3 1.3 0 100 2.6 1.3 1.3 0 000-2.6zm-2.3 1.3a2.3 2.3 0 114.6 0 2.3 2.3 0 01-4.6 0z"
            fill="currentColor"
            fill-rule="evenodd"
          />
          <path
            clip-rule="evenodd"
            d="M10.502 2.949v-.953h1v.953h-1zm0 5.051V6.98h1V8h-1zm2.549-3.502h.953v1h-.953v-1zM8 4.498h1.02v1H8v-1zm4.805 1.596l.674.674-.708.707-.673-.674.707-.707zM9.233 2.522l.722.722-.708.707-.721-.722.707-.707zm2.865.674l.673-.674.708.708-.674.673-.707-.707zM8.526 6.768l.722-.722.707.708-.722.721-.707-.707z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-medium"
        style="margin-top: 5px;"
      >
        Jenkin Artifact
      </p>
    </div>
  </div>
</div>
`;

exports[`Card icon test should render icon card with no props 1`] = `
<div>
  <div
    class="bp3-card bp3-elevation-0 card"
  >
    <div
      class="cardIcon"
    >
      <span
        class="bp3-icon StyledProps--main"
        data-icon="advanced"
      >
        <svg
          height="25"
          viewBox="0 0 16 16"
          width="25"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M3.557 4.017a.5.5 0 00-.5.492v7.005a.5.5 0 00.5.507h8.98a.5.5 0 00.5-.5l.001-2.554a.5.5 0 111 0v2.554a1.5 1.5 0 01-1.5 1.5h-8.98a1.5 1.5 0 01-1.5-1.522V4.495a1.5 1.5 0 011.5-1.478h2.951a.5.5 0 010 1H3.557z"
            fill="currentColor"
            fill-rule="evenodd"
          />
          <path
            clip-rule="evenodd"
            d="M11.002 3.694a1.3 1.3 0 100 2.6 1.3 1.3 0 000-2.6zm-2.3 1.3a2.3 2.3 0 114.6 0 2.3 2.3 0 01-4.6 0z"
            fill="currentColor"
            fill-rule="evenodd"
          />
          <path
            clip-rule="evenodd"
            d="M10.502 2.949v-.953h1v.953h-1zm0 5.051V6.98h1V8h-1zm2.549-3.502h.953v1h-.953v-1zM8 4.498h1.02v1H8v-1zm4.805 1.596l.674.674-.708.707-.673-.674.707-.707zM9.233 2.522l.722.722-.708.707-.721-.722.707-.707zm2.865.674l.673-.674.708.708-.674.673-.707-.707zM8.526 6.768l.722-.722.707.708-.722.721-.707-.707z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-medium"
        style="margin-top: 5px;"
      >
        Jenkin Artifact
      </p>
    </div>
  </div>
</div>
`;

exports[`Card menu test should render cards with props selected and interactive 1`] = `
<div>
  <div
    class="bp3-card bp3-interactive bp3-elevation-0 card selected interactive"
    tabindex="0"
  >
    <div
      class="cardMenu colorIdentifier"
      style="color: red;"
    >
      <div
        class="dots"
      >
        <span
          class="bp3-popover-wrapper"
        >
          <span
            class="bp3-popover-target"
          >
            <button
              class="bp3-button bp3-minimal button StyledProps--font StyledProps--main menu with-current-color round iconOnly without-shadow withLeftIcon"
              type="button"
            >
              <span
                class="bp3-icon bp3-icon-more StyledProps--main"
                icon="more"
              >
                <svg
                  data-icon="more"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    more
                  </desc>
                  <path
                    d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </span>
        </span>
      </div>
      <p
        class="StyledProps--font StyledProps--main title StyledProps--font-medium"
      >
        Jenkins Artifact
      </p>
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-medium"
        style="margin-top: 5px;"
      >
        Jenkin Artifact
      </p>
    </div>
  </div>
</div>
`;

exports[`Card menu test should render icon card with no props 1`] = `
<div>
  <div
    class="bp3-card bp3-elevation-0 card"
  >
    <div
      class="cardMenu colorIdentifier"
      style="color: red;"
    >
      <div
        class="dots"
      >
        <span
          class="bp3-popover-wrapper"
        >
          <span
            class="bp3-popover-target"
          >
            <button
              class="bp3-button bp3-minimal button StyledProps--font StyledProps--main menu with-current-color round iconOnly without-shadow withLeftIcon"
              type="button"
            >
              <span
                class="bp3-icon bp3-icon-more StyledProps--main"
                icon="more"
              >
                <svg
                  data-icon="more"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    more
                  </desc>
                  <path
                    d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </span>
        </span>
      </div>
      <p
        class="StyledProps--font StyledProps--main title StyledProps--font-medium"
      >
        Jenkins Artifact
      </p>
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-medium"
        style="margin-top: 5px;"
      >
        Jenkin Artifact
      </p>
    </div>
  </div>
</div>
`;

exports[`Card test should render cards with no props 1`] = `
<div>
  <div
    class="bp3-card bp3-elevation-0 card"
  >
    <p
      class="StyledProps--font StyledProps--main StyledProps--font-medium"
      style="margin-top: 5px;"
    >
      Jenkin Artifact
    </p>
  </div>
</div>
`;

exports[`Card test should render cards with props selected and interactive 1`] = `
<div>
  <div
    class="bp3-card bp3-interactive bp3-elevation-0 card selected interactive"
    tabindex="0"
  >
    <p
      class="StyledProps--font StyledProps--main StyledProps--font-medium"
      style="margin-top: 5px;"
    >
      Jenkin Artifact
    </p>
  </div>
</div>
`;
